--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.4",
+    "@types/sqlite3": "^3.1.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
